[gd_scene load_steps=4 format=2]

[ext_resource path="res://pages/settings_page.gd" type="Script" id=1]
[ext_resource path="res://fonts/bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://custom_classes/SpinBoxMobile.tscn" type="PackedScene" id=3]

[node name="SomeOtherPage" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 478.0
margin_bottom = 851.0

[node name="lbl_PageTitle" type="Label" parent="VBoxContainer"]
margin_right = 476.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Settings"
align = 1

[node name="ContainerSettings" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 476.0
margin_bottom = 322.0

[node name="Label" type="Label" parent="VBoxContainer/ContainerSettings"]
margin_right = 476.0
margin_bottom = 29.0
text = "Number of people you hate: "
align = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/ContainerSettings"]
margin_top = 37.0
margin_right = 476.0
margin_bottom = 117.0
size_flags_horizontal = 3

[node name="SpinBoxMobile" parent="VBoxContainer/ContainerSettings/CenterContainer" instance=ExtResource( 3 )]
margin_left = 42.0
margin_right = 434.0
margin_bottom = 80.0
value = 0
max_value = 10

[node name="lbl_Space" type="Label" parent="VBoxContainer/ContainerSettings"]
margin_top = 125.0
margin_right = 476.0
margin_bottom = 154.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ContainerSettings"]
margin_top = 162.0
margin_right = 476.0
margin_bottom = 285.0
custom_constants/margin_right = 50
custom_constants/margin_left = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ContainerSettings/MarginContainer"]
margin_left = 50.0
margin_right = 426.0
margin_bottom = 123.0

[node name="btn_DelicateAction" type="Button" parent="VBoxContainer/ContainerSettings/MarginContainer/VBoxContainer"]
margin_right = 376.0
margin_bottom = 39.0
text = "Some delicate action"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_Space" type="Label" parent="VBoxContainer/ContainerSettings/MarginContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 376.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_Credits" type="Button" parent="VBoxContainer/ContainerSettings/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 376.0
margin_bottom = 123.0
text = "Credits"

[node name="ContainerCredits" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 330.0
margin_right = 476.0
margin_bottom = 849.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ContainerCredits"]
margin_right = 476.0
margin_bottom = 519.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="rtl_Credits" type="RichTextLabel" parent="VBoxContainer/ContainerCredits/ScrollContainer"]
margin_right = 476.0
margin_bottom = 519.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 2 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[connection signal="pressed" from="VBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/btn_DelicateAction" to="." method="_on_btn_DelicateAction_pressed"]
[connection signal="pressed" from="VBoxContainer/ContainerSettings/MarginContainer/VBoxContainer/btn_Credits" to="." method="_on_btn_Credits_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/ContainerCredits/ScrollContainer/rtl_Credits" to="." method="_on_rtl_Credits_meta_clicked"]
